# common_cpp

./: CMakeLists.txt  README.md  package.xml
include/: common.h
include/common_cpp/: common.h  logger.h  matrix.h  measurement.h  progress_bar.h  quaternion.h  transform.h  wgs84.h
src/: common.cpp  unit_tests.cpp
test/: quaternion.cpp  rotation.cpp  test_matrix.cpp  test_quaternion.cpp  test_transform.cpp  transform.cpp
